[gd_scene load_steps=33 format=2]

[ext_resource path="res://assets/ui/joystick.png" type="Texture" id=1]
[ext_resource path="res://tres/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/ui/HUD.gd" type="Script" id=3]
[ext_resource path="res://scenes/ui/ResultPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/items/item_2.png" type="Texture" id=5]
[ext_resource path="res://scenes/ui/InventoryItem.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/items/item_1.png" type="Texture" id=7]
[ext_resource path="res://scenes/ui/LevelProgressBar.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/ui/button_sfx_on.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/button_sfx_off.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/button_music_on.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/button_music_off.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/button_bg.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/flags/zh.png" type="Texture" id=14]
[ext_resource path="res://assets/ui/button_about.png" type="Texture" id=15]
[ext_resource path="res://tres/default_font_24.tres" type="DynamicFont" id=16]
[ext_resource path="res://assets/items/item_3.png" type="Texture" id=17]
[ext_resource path="res://tres/default_font_32.tres" type="DynamicFont" id=18]

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 0.588235 )

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 128, 1, 32, 30 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 160, 1, 32, 30 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 192, 1, 32, 30 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 96, 1, 32, 30 )

[sub_resource type="StreamTexture" id=4]
load_path = "res://.import/joystick.png-b41ca8c2cd7f6c03d2c3044cac4eddca.stex"

[sub_resource type="AtlasTexture" id=5]
atlas = SubResource( 4 )
region = Rect2( 32, 1, 32, 30 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.894118, 0.290196, 0.290196, 1 )
corner_radius_bottom_right = 100
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=11]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.752941, 0.796078, 0.862745, 1 )
corner_radius_bottom_right = 100
corner_detail = 1
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=15]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 16.0
content_margin_bottom = 16.0
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.0745098, 0.101961, 1 )
corner_radius_top_left = 16
corner_radius_bottom_right = 16
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id=17]
content_margin_left = 32.0
content_margin_right = 32.0
content_margin_top = 32.0
content_margin_bottom = 32.0

[node name="HUD" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="MapLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -12.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 48 )
custom_styles/normal = SubResource( 16 )
text = "Map Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="MapLabel"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 2 )

[node name="Joystick" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R" type="Control" parent="Joystick"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crouch" type="TouchScreenButton" parent="Joystick/R"]
position = Vector2( -304, -168 )
scale = Vector2( 4, 4 )
normal = SubResource( 6 )
action = "ui_down"

[node name="Roll" type="TouchScreenButton" parent="Joystick/R"]
position = Vector2( -176, -296 )
scale = Vector2( 4, 4 )
normal = SubResource( 7 )
action = "roll"

[node name="Jump" type="TouchScreenButton" parent="Joystick/R"]
position = Vector2( -176, -168 )
scale = Vector2( 4, 4 )
normal = SubResource( 8 )
action = "jump"

[node name="L" type="Control" parent="Joystick"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TouchScreenButton" parent="Joystick/L"]
position = Vector2( 248, -168 )
scale = Vector2( 4, 4 )
normal = SubResource( 3 )
action = "ui_right"

[node name="Left" type="TouchScreenButton" parent="Joystick/L"]
position = Vector2( 80, -168 )
scale = Vector2( 4, 4 )
normal = SubResource( 5 )
action = "ui_left"

[node name="VBoxC" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="VBoxC"]
margin_right = 1280.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxC" type="HBoxContainer" parent="VBoxC/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sep" type="Control" parent="VBoxC/Panel/HBoxC"]
margin_right = 24.0
margin_bottom = 64.0
rect_min_size = Vector2( 24, 0 )

[node name="LevelProgressBar" parent="VBoxC/Panel/HBoxC" instance=ExtResource( 8 )]

[node name="Sep2" type="Control" parent="VBoxC/Panel/HBoxC"]
margin_left = 288.0
margin_right = 312.0
margin_bottom = 64.0
rect_min_size = Vector2( 24, 0 )

[node name="HBoxCItems" type="HBoxContainer" parent="VBoxC/Panel/HBoxC"]
margin_left = 316.0
margin_right = 476.0
margin_bottom = 64.0
custom_constants/separation = 8

[node name="Item1" parent="VBoxC/Panel/HBoxC/HBoxCItems" instance=ExtResource( 6 )]
margin_top = 8.0
margin_right = 48.0
margin_bottom = 56.0
rect_min_size = Vector2( 48, 48 )
texture_normal = ExtResource( 7 )

[node name="Item2" parent="VBoxC/Panel/HBoxC/HBoxCItems" instance=ExtResource( 6 )]
margin_left = 56.0
margin_top = 8.0
margin_right = 104.0
margin_bottom = 56.0
rect_min_size = Vector2( 48, 48 )
texture_normal = ExtResource( 5 )

[node name="Item3" parent="VBoxC/Panel/HBoxC/HBoxCItems" instance=ExtResource( 6 )]
margin_left = 112.0
margin_top = 8.0
margin_right = 160.0
margin_bottom = 56.0
rect_min_size = Vector2( 48, 48 )

[node name="Sep3" type="Control" parent="VBoxC/Panel/HBoxC"]
margin_left = 480.0
margin_right = 504.0
margin_bottom = 64.0
rect_min_size = Vector2( 24, 0 )

[node name="LevelLabel" type="Label" parent="VBoxC/Panel/HBoxC"]
margin_left = 508.0
margin_right = 572.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
text = "Lv.1"
align = 1
valign = 1

[node name="ExpBar" type="ProgressBar" parent="VBoxC/Panel/HBoxC"]
margin_left = 576.0
margin_top = 26.0
margin_right = 768.0
margin_bottom = 38.0
rect_min_size = Vector2( 192, 12 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/fg = SubResource( 10 )
custom_styles/bg = SubResource( 11 )
value = 75.0
percent_visible = false

[node name="HBoxC" type="HBoxContainer" parent="VBoxC/Panel/HBoxC"]
margin_left = 1024.0
margin_right = 1280.0
margin_bottom = 64.0
size_flags_horizontal = 10
custom_constants/separation = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="VBoxC/Panel/HBoxC/HBoxC"]
margin_right = 128.0
margin_bottom = 64.0
rect_min_size = Vector2( 128, 64 )
text = "Exit"

[node name="Menu" type="Button" parent="VBoxC/Panel/HBoxC/HBoxC"]
margin_left = 128.0
margin_right = 256.0
margin_bottom = 64.0
rect_min_size = Vector2( 128, 0 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
toggle_mode = true
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultPanel" parent="VBoxC" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 64.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MenuPanel" type="PanelContainer" parent="VBoxC"]
visible = false
margin_top = 388.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 15 )

[node name="VBoxC" type="VBoxContainer" parent="VBoxC/MenuPanel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1264.0
margin_bottom = 316.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxCMain" type="HBoxContainer" parent="VBoxC/MenuPanel/VBoxC"]
margin_right = 1248.0
margin_bottom = 232.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxC" type="VBoxContainer" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain"]
margin_right = 892.0
margin_bottom = 232.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxC" type="HBoxContainer" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/VBoxC"]
margin_right = 892.0
margin_bottom = 232.0
size_flags_vertical = 3

[node name="VBoxC" type="VBoxContainer" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/VBoxC/HBoxC"]
margin_right = 444.0
margin_bottom = 232.0
size_flags_horizontal = 3
custom_constants/separation = 16
alignment = 1

[node name="Portrait" type="TextureRect" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/VBoxC/HBoxC/VBoxC"]
margin_left = 126.0
margin_right = 318.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 17 )
expand = true
stretch_mode = 6

[node name="Panel" type="Panel" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/VBoxC/HBoxC/VBoxC/Portrait"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/VBoxC/HBoxC/VBoxC"]
margin_left = 126.0
margin_top = 208.0
margin_right = 318.0
margin_bottom = 232.0
rect_min_size = Vector2( 192, 0 )
size_flags_horizontal = 4
text = "KTMK2"
align = 1
valign = 1

[node name="Select" type="Button" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/VBoxC/HBoxC/VBoxC"]
visible = false
margin_left = 80.0
margin_top = 287.0
margin_right = 208.0
margin_bottom = 335.0
rect_min_size = Vector2( 128, 48 )
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="RichTextLabel" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/VBoxC/HBoxC"]
margin_left = 448.0
margin_right = 892.0
margin_bottom = 232.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 16 )
custom_styles/normal = SubResource( 17 )
bbcode_enabled = true
bbcode_text = "Pupu is a little dragon who aspires to become a chef.

Skill: [color=#8ad8cc]x1.5[/color] earned coins"
text = "Pupu is a little dragon who aspires to become a chef.

Skill: x1.5 earned coins"

[node name="HBoxC2" type="HBoxContainer" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/VBoxC"]
visible = false
margin_top = 311.0
margin_right = 582.0
margin_bottom = 375.0

[node name="Last" type="Button" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/VBoxC/HBoxC2"]
margin_right = 191.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoLabel" type="Label" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/VBoxC/HBoxC2"]
margin_left = 195.0
margin_right = 386.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 18 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/VBoxC/HBoxC2"]
margin_left = 390.0
margin_right = 582.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Collections" type="VBoxContainer" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain"]
margin_left = 896.0
margin_right = 1248.0
margin_bottom = 232.0

[node name="Label" type="Label" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections"]
margin_right = 352.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
text = "Collections"
valign = 1

[node name="ScrollC" type="ScrollContainer" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections"]
margin_top = 52.0
margin_right = 352.0
margin_bottom = 232.0
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridC" type="GridContainer" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC"]
margin_right = 352.0
margin_bottom = 736.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 32
custom_constants/hseparation = 32
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArchiveItem1" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem2" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 96.0
margin_right = 160.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem3" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 192.0
margin_right = 256.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem4" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 288.0
margin_right = 352.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem5" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_top = 96.0
margin_right = 64.0
margin_bottom = 160.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem6" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 96.0
margin_top = 96.0
margin_right = 160.0
margin_bottom = 160.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem7" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 192.0
margin_top = 96.0
margin_right = 256.0
margin_bottom = 160.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem8" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 288.0
margin_top = 96.0
margin_right = 352.0
margin_bottom = 160.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem9" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_top = 192.0
margin_right = 64.0
margin_bottom = 256.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem10" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 96.0
margin_top = 192.0
margin_right = 160.0
margin_bottom = 256.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem11" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 192.0
margin_top = 192.0
margin_right = 256.0
margin_bottom = 256.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem12" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 288.0
margin_top = 192.0
margin_right = 352.0
margin_bottom = 256.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem13" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_top = 288.0
margin_right = 64.0
margin_bottom = 352.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem14" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 96.0
margin_top = 288.0
margin_right = 160.0
margin_bottom = 352.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem15" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 192.0
margin_top = 288.0
margin_right = 256.0
margin_bottom = 352.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem16" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 288.0
margin_top = 288.0
margin_right = 352.0
margin_bottom = 352.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem17" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_top = 384.0
margin_right = 64.0
margin_bottom = 448.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem18" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 96.0
margin_top = 384.0
margin_right = 160.0
margin_bottom = 448.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem19" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 192.0
margin_top = 384.0
margin_right = 256.0
margin_bottom = 448.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem20" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 288.0
margin_top = 384.0
margin_right = 352.0
margin_bottom = 448.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem21" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_top = 480.0
margin_right = 64.0
margin_bottom = 544.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem22" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 96.0
margin_top = 480.0
margin_right = 160.0
margin_bottom = 544.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem23" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 192.0
margin_top = 480.0
margin_right = 256.0
margin_bottom = 544.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem24" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 288.0
margin_top = 480.0
margin_right = 352.0
margin_bottom = 544.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem25" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_top = 576.0
margin_right = 64.0
margin_bottom = 640.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem26" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 96.0
margin_top = 576.0
margin_right = 160.0
margin_bottom = 640.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem27" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 192.0
margin_top = 576.0
margin_right = 256.0
margin_bottom = 640.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem28" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 288.0
margin_top = 576.0
margin_right = 352.0
margin_bottom = 640.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem29" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_top = 672.0
margin_right = 64.0
margin_bottom = 736.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem30" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 96.0
margin_top = 672.0
margin_right = 160.0
margin_bottom = 736.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem31" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 192.0
margin_top = 672.0
margin_right = 256.0
margin_bottom = 736.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="ArchiveItem32" parent="VBoxC/MenuPanel/VBoxC/HBoxCMain/Collections/ScrollC/GridC" instance=ExtResource( 6 )]
margin_left = 288.0
margin_top = 672.0
margin_right = 352.0
margin_bottom = 736.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4

[node name="HBoxCButton" type="HBoxContainer" parent="VBoxC/MenuPanel/VBoxC"]
margin_top = 236.0
margin_right = 1248.0
margin_bottom = 300.0
size_flags_vertical = 8
custom_constants/separation = 32
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="TextureButton" parent="VBoxC/MenuPanel/VBoxC/HBoxCButton"]
margin_left = 896.0
margin_right = 960.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 0 )
size_flags_horizontal = 4
toggle_mode = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="SFX" type="TextureButton" parent="VBoxC/MenuPanel/VBoxC/HBoxCButton"]
margin_left = 992.0
margin_right = 1056.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 0 )
size_flags_horizontal = 4
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="Languages" type="TextureButton" parent="VBoxC/MenuPanel/VBoxC/HBoxCButton"]
margin_left = 1088.0
margin_right = 1152.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 3
texture_normal = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="Icon" type="TextureRect" parent="VBoxC/MenuPanel/VBoxC/HBoxCButton/Languages"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="TextureButton" parent="VBoxC/MenuPanel/VBoxC/HBoxCButton"]
margin_left = 1184.0
margin_right = 1248.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 3
texture_normal = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="VBoxC/MenuPanel/VBoxC/HBoxCButton/About"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 15 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxC/Panel/HBoxC/HBoxC/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="VBoxC/Panel/HBoxC/HBoxC/Menu" to="." method="_on_Menu_pressed"]
[connection signal="toggled" from="VBoxC/Panel/HBoxC/HBoxC/Menu" to="." method="_on_Menu_toggled"]
[connection signal="toggled" from="VBoxC/MenuPanel/VBoxC/HBoxCButton/Music" to="." method="_on_Music_toggled"]
[connection signal="toggled" from="VBoxC/MenuPanel/VBoxC/HBoxCButton/SFX" to="." method="_on_SFX_toggled"]
[connection signal="pressed" from="VBoxC/MenuPanel/VBoxC/HBoxCButton/Languages" to="." method="_on_Languages_pressed"]
[connection signal="pressed" from="VBoxC/MenuPanel/VBoxC/HBoxCButton/About" to="." method="_on_About_pressed"]
